<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.misterjeffbrown.playwise.AskActivity"
    android:background="@color/dice_bg">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/ask_title"
        android:layout_centerHorizontal="true"
        android:text="@string/ask_title"
        android:textSize="18pt"
        android:textStyle="bold"
        android:textColor="@color/bone"
        android:gravity="center_horizontal"/>


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/ask_whatIs"
        android:layout_below="@+id/ask_title"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/ask_whatIs"
        android:textSize="11pt"
        android:textColor="@color/bone"/>

    <EditText android:layout_width="@dimen/ask_questionWidth" android:layout_height="wrap_content"
        android:id="@+id/ask_question"
        android:layout_below="@id/ask_whatIs"
        android:hint="@string/ask_questionHint"
        android:textColor="@color/bone"
        android:textSize="10pt"/>


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/ask_qMark"
        android:layout_below="@+id/ask_whatIs"
        android:layout_toRightOf="@id/ask_question"
        android:layout_alignBaseline="@id/ask_question"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="\?"
        android:textSize="11pt"
        android:textColor="@color/bone"/>


    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/ask_calculate"
        android:layout_below="@id/ask_question"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:text="@string/dice_calculate"
        android:textColor="@color/bone"
        android:textSize="11pt"
        android:textStyle="bold"
        android:onClick="askQuestion"/>


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/ask_results"
        android:layout_below="@id/ask_calculate"
        android:layout_marginTop="28dp"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="14pt"
        android:textColor="@color/bone"/>

</RelativeLayout>