<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.misterjeffbrown.playwise.DiceActivity"
    android:background="@color/dice_bg">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/dice_title"
        android:layout_centerHorizontal="true"
        android:text="@string/dice_title"
        android:textSize="32pt"
        android:textColor="@color/bone"/>


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/dice_d"
        android:layout_below="@+id/dice_title"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:text="@string/dice_d"
        android:textSize="14pt"
        android:textColor="@color/bone"/>

    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/dice_numDice"
        android:layout_below="@id/dice_title"
        android:layout_toLeftOf="@id/dice_d"
        android:layout_alignBaseline="@id/dice_d"
        android:text="1"
        android:textColor="@color/bone"
        android:textSize="14pt"/>

    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/dice_numFaces"
        android:layout_below="@id/dice_title"
        android:layout_toRightOf="@id/dice_d"
        android:layout_alignBaseline="@id/dice_d"
        android:layout_marginTop="24dp"
        android:text="6"
        android:textColor="@color/bone"
        android:textSize="14pt"/>


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/dice_probabilityOf1"
        android:layout_below="@id/dice_d"
        android:layout_marginTop="34dp"
        android:layout_centerHorizontal="true"
        android:text="@string/dice_probabilityOf1"
        android:textSize="14pt"
        android:textColor="@color/bone"
        android:gravity="center_horizontal"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/dice_probabilityOf2"
        android:layout_below="@id/dice_probabilityOf1"
        android:layout_centerHorizontal="true"
        android:text="@string/dice_probabilityOf2"
        android:textSize="14pt"
        android:textColor="@color/bone"
        android:gravity="center_horizontal"/>

    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/dice_desiredOutcome"
        android:layout_below="@id/dice_probabilityOf1"
        android:layout_toRightOf="@id/dice_probabilityOf2"
        android:layout_marginLeft="8dp"
        android:layout_alignBaseline="@id/dice_probabilityOf2"
        android:text="4"
        android:textColor="@color/bone"
        android:textSize="14pt"/>


    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/dice_calculate"
        android:layout_below="@id/dice_desiredOutcome"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:text="@string/dice_calculate"
        android:textColor="@color/dice_bg"
        android:textSize="14pt"
        android:onClick="dice_calculate"/>


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/dice_results"
        android:layout_below="@id/dice_calculate"
        android:layout_marginTop="28dp"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="14pt"
        android:textColor="@color/bone"/>

</RelativeLayout>
